--- a/modules/text-field/scss/_text-field.scss
+++ b/modules/text-field/scss/_text-field.scss
@@ -16,7 +16,8 @@
     &:before {
         @include position(absolute, null 0 $base-spacing-unit - 1 0);
         height: 1px;
-        border-bottom: 1px solid $black-4;
+        border-bottom-width: 1px;
+        border-bottom-style: solid;
     }
 
     &:after {
@@ -27,6 +28,14 @@
         @include transition-property(transform);
         @include transition-duration(0.6s);
         @include transition-timing-function($ease-out-quint);
+    }
+
+    &.text-field--theme-light:before {
+        border-bottom-color: $black-4;
+    }
+
+    &.text-field--theme-dark:before {
+        border-bottom-color: $white-4;
     }
 }
 
@@ -70,7 +79,6 @@
     .text-field__label {
         display: block;
         @include position(absolute, $base-spacing-unit null null 0);
-        color: $black-2;
         line-height: 32px;
         pointer-events: none;
         @include transform(translateY($base-spacing-unit * 3));
@@ -78,6 +86,14 @@
         @include transition-property(transform, color);
         @include transition-duration(0.4s);
         @include transition-timing-function($ease-out-quint);
+
+        .text-field--theme-light & {
+            color: $black-2;
+        }
+
+        .text-field--theme-dark & {
+            color: $white-2;
+        }
 
         .text-field--fixed-label & {
             @include transform(none);
@@ -91,8 +107,12 @@
             color: $blue;
         }
 
-        .text-field--is-disabled & {
+        .text-field--is-disabled.text-field--theme-light & {
             color: $black-3 !important;
+        }
+
+        .text-field--is-disabled.text-field--theme-dark & {
+            color: $white-3 !important;
         }
 
         .text-field--valid & {
@@ -110,8 +130,20 @@
         width: 100%;
         font-weight: 400;
 
-        .text-field--is-disabled & {
-            color: $black-3 !important;
+        .text-field--theme-light & {
+            color: $black-1;
+        }
+
+        .text-field--theme-dark & {
+            color: $white-1;
+        }
+
+        .text-field--is-disabled.text-field--theme-light & {
+            color: $black-3;
+        }
+
+        .text-field--is-disabled.text-field--theme-dark & {
+            color: $white-3;
         }
     }
 
@@ -132,11 +164,18 @@
         @include size(48px 44px);
         line-height: 44px;
         @include font-size(24px);
-        color: $black-2;
         text-align: center;
         @include transition-property(color);
         @include transition-duration(0.4s);
         @include transition-timing-function($ease-out-quint);
+
+        .text-field--theme-light & {
+            color: $black-2;
+        }
+
+        .text-field--theme-dark & {
+            color: $white-2;
+        }
 
         .text-field--is-focus & {
             color: $blue;
