--- a/modules/dropdown/views/dropdown-menu.html
+++ b/modules/dropdown/views/dropdown-menu.html
@@ -1,4 +1,3 @@
-<div class="dropdown-menu dropdown-menu--{{ lxDropdownMenu.parentCtrl.position }}"
-     ng-class="{ 'dropdown__menu--is-open': lxDropdownMenu.parentCtrl.isOpen }">
+<div class="dropdown-menu">
     <div class="dropdown-menu__content" ng-transclude ng-if="lxDropdownMenu.parentCtrl.isOpen"></div>
 </div>
