fix scss: fix mdi mixin

--- a/core/scss/tools/_mixins.scss
+++ b/core/scss/tools/_mixins.scss
@@ -39,7 +39,7 @@
 // Material design icon
 @mixin mdi() {
     display: inline-block;
-    font: normal normal normal #{$mdi-font-size-base}/1 MaterialDesignIcons;
+    font: normal normal normal #{$mdi-font-size-base}/1 '#{$mdi-font-name}';
     font-size: inherit;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
