chore demo: start reworking documentation site with buttons

--- a/demo/scss/lumx.scss
+++ b/demo/scss/lumx.scss
@@ -2,20 +2,17 @@
 //    #LUMX
 //\*------------------------------------*/
 
-@import "settings/settings.common";
+@import "settings/defaults";
+
 @import "../../core/scss/lumx";
 
-@import "modules/common/modules.common.layout";
-@import "modules/common/modules.common.sidebar";
-@import "modules/common/modules.common.header";
-@import "modules/common/modules.common.main";
-@import "modules/common/modules.common.footer";
+@import "tools/mixins";
 
-@import "modules/home/modules.home.banner";
-@import "modules/home/modules.home.github-activity";
-@import "modules/home/modules.home.features";
+@import "base/page";
 
-@import "objects/objects.example";
-@import "objects/objects.colors";
+@import "layout/header";
+@import "layout/app";
+@import "layout/sidebar";
+@import "layout/main";
 
-@import "components/components.hljs";
+@import "components/component";
