--- a/demo/scss/settings/_defaults.scss
+++ b/demo/scss/settings/_defaults.scss
@@ -1,5 +1,5 @@
 ///*------------------------------------*\
-//    #SETTINGS-COMMON
+//    #DEFAULT
 //\*------------------------------------*/
 
 // Roboto path
@@ -7,6 +7,3 @@ $roboto-font-path: "../../fonts/roboto";
 
 // Material Design Icons path
 $md-icons-font-path: "../../fonts/md-icons";
-
-// Override defaults
-$base-background-color: #fff;
