--- a/modules/button/demo/includes/states.html
+++ b/modules/button/demo/includes/states.html
@@ -1,4 +1,2 @@
-<button class="btn btn--m btn--black btn--raised" disabled>Button</button>
-<a class="btn btn--m btn--black btn--raised btn--is-disabled">Button</a>
-<button class="btn btn--m btn--black btn--flat" disabled>Button</button>
-<a class="btn btn--m btn--black btn--flat btn--is-disabled">Button</a>
+<lx-button ng-disabled="true">Button</lx-button>
+<lx-button lx-type="flat" ng-disabled="true">Button</lx-button>
