--- a/modules/button/demo/includes/custom-colors.html
+++ b/modules/button/demo/includes/custom-colors.html
@@ -1,1 +1,1 @@
-<button class="btn btn--m btn--raised bgc-indigo-200 tc-indigo-600" lx-ripple="purple-400">Button</button>
+<button class="btn btn--m btn--raised bgc-indigo-50 tc-indigo-900" lx-ripple="indigo-500">Button</button>
