--- a/modules/button/demo/includes/sizes.html
+++ b/modules/button/demo/includes/sizes.html
@@ -1,23 +1,5 @@
-<div class="mb">
-    <button class="btn btn--xs btn--blue btn--raised" lx-ripple>Button</button>
-    <button class="btn btn--s btn--blue btn--raised" lx-ripple>Button</button>
-    <button class="btn btn--m btn--blue btn--raised" lx-ripple>Button</button>
-    <button class="btn btn--l btn--blue btn--raised" lx-ripple>Button</button>
-    <button class="btn btn--xl btn--blue btn--raised" lx-ripple>Button</button>
-</div>
-
-<div class="mb">
-    <button class="btn btn--xs btn--blue btn--fab" lx-ripple><i class="mdi mdi-pencil"></i></button>
-    <button class="btn btn--s btn--blue btn--fab" lx-ripple><i class="mdi mdi-pencil"></i></button>
-    <button class="btn btn--m btn--blue btn--fab" lx-ripple><i class="mdi mdi-pencil"></i></button>
-    <button class="btn btn--l btn--blue btn--fab" lx-ripple><i class="mdi mdi-pencil"></i></button>
-    <button class="btn btn--xl btn--blue btn--fab" lx-ripple><i class="mdi mdi-pencil"></i></button>
-</div>
-
-<div>
-    <button class="btn btn--xs btn--blue btn--icon" lx-ripple><i class="mdi mdi-pencil"></i></button>
-    <button class="btn btn--s btn--blue btn--icon" lx-ripple><i class="mdi mdi-pencil"></i></button>
-    <button class="btn btn--m btn--blue btn--icon" lx-ripple><i class="mdi mdi-pencil"></i></button>
-    <button class="btn btn--l btn--blue btn--icon" lx-ripple><i class="mdi mdi-pencil"></i></button>
-    <button class="btn btn--xl btn--blue btn--icon" lx-ripple><i class="mdi mdi-pencil"></i></button>
-</div>
+<lx-button lx-size="xl" lx-type="raised">Button</lx-button>
+<lx-button lx-size="l" lx-type="raised">Button</lx-button>
+<lx-button lx-size="m" lx-type="raised">Button</lx-button>
+<lx-button lx-size="s" lx-type="raised">Button</lx-button>
+<lx-button lx-size="xs" lx-type="raised">Button</lx-button>
