--- a/modules/button/demo/includes/sizes.html
+++ b/modules/button/demo/includes/sizes.html
@@ -1,5 +1,7 @@
-<lx-button lx-size="xl" lx-type="raised">Button</lx-button>
-<lx-button lx-size="l" lx-type="raised">Button</lx-button>
-<lx-button lx-size="m" lx-type="raised">Button</lx-button>
-<lx-button lx-size="s" lx-type="raised">Button</lx-button>
-<lx-button lx-size="xs" lx-type="raised">Button</lx-button>
+<div class="p+">
+    <lx-button lx-size="xl" lx-type="raised">Button</lx-button>
+    <lx-button lx-size="l" lx-type="raised">Button</lx-button>
+    <lx-button lx-size="m" lx-type="raised">Button</lx-button>
+    <lx-button lx-size="s" lx-type="raised">Button</lx-button>
+    <lx-button lx-size="xs" lx-type="raised">Button</lx-button>
+</div>
