--- a/modules/button/demo/includes/states.html
+++ b/modules/button/demo/includes/states.html
@@ -1,2 +1,4 @@
-<lx-button ng-disabled="true">Button</lx-button>
-<lx-button lx-type="flat" ng-disabled="true">Button</lx-button>
+<div class="p+">
+    <lx-button ng-disabled="true">Button</lx-button>
+    <lx-button lx-type="flat" ng-disabled="true">Button</lx-button>
+</div>
