chore demo: add card documentation

--- a/demo/includes/layout/sidebar/sidebar-components.html
+++ b/demo/includes/layout/sidebar/sidebar-components.html
@@ -4,6 +4,9 @@
             <a class="sidebar__link" ui-sref="app.components.button" ui-sref-active="sidebar__link--is-active">Button</a>
         </li>
         <li>
+            <a class="sidebar__link" ui-sref="app.components.card" ui-sref-active="sidebar__link--is-active">Card</a>
+        </li>
+        <li>
             <a class="sidebar__link" ui-sref="app.components.text-field" ui-sref-active="sidebar__link--is-active">Text field</a>
         </li>
     </ul>
