--- a/demo/includes/layout/sidebar/sidebar-components.html
+++ b/demo/includes/layout/sidebar/sidebar-components.html
@@ -7,6 +7,9 @@
             <a class="sidebar__link" ui-sref="app.components.card" ui-sref-active="sidebar__link--is-active">Card</a>
         </li>
         <li>
+            <a class="sidebar__link" ui-sref="app.components.checkbox" ui-sref-active="sidebar__link--is-active">Checkbox</a>
+        </li>
+        <li>
             <a class="sidebar__link" ui-sref="app.components.text-field" ui-sref-active="sidebar__link--is-active">Text field</a>
         </li>
     </ul>
