chore demo: add data table documentation

--- a/demo/includes/layout/sidebar/sidebar-components.html
+++ b/demo/includes/layout/sidebar/sidebar-components.html
@@ -10,6 +10,9 @@
             <a class="sidebar__link" ui-sref="app.components.checkbox" ui-sref-active="sidebar__link--is-active">Checkbox</a>
         </li>
         <li>
+            <a class="sidebar__link" ui-sref="app.components.data-table" ui-sref-active="sidebar__link--is-active">Data table</a>
+        </li>
+        <li>
             <a class="sidebar__link" ui-sref="app.components.text-field" ui-sref-active="sidebar__link--is-active">Text field</a>
         </li>
     </ul>
