--- a/demo/includes/layout/sidebar/sidebar-components.html
+++ b/demo/includes/layout/sidebar/sidebar-components.html
@@ -13,6 +13,9 @@
             <a class="sidebar__link" ui-sref="app.components.data-table" ui-sref-active="sidebar__link--is-active">Data table</a>
         </li>
         <li>
+            <a class="sidebar__link" ui-sref="app.components.date-picker" ui-sref-active="sidebar__link--is-active">Date picker</a>
+        </li>
+        <li>
             <a class="sidebar__link" ui-sref="app.components.text-field" ui-sref-active="sidebar__link--is-active">Text field</a>
         </li>
     </ul>
