--- a/demo/includes/layout/sidebar/sidebar-components.html
+++ b/demo/includes/layout/sidebar/sidebar-components.html
@@ -19,6 +19,9 @@
             <a class="sidebar__link" ui-sref="app.components.dialog" ui-sref-active="sidebar__link--is-active">Dialog</a>
         </li>
         <li>
+            <a class="sidebar__link" ui-sref="app.components.dropdown" ui-sref-active="sidebar__link--is-active">Dropdown</a>
+        </li>
+        <li>
             <a class="sidebar__link" ui-sref="app.components.text-field" ui-sref-active="sidebar__link--is-active">Text field</a>
         </li>
     </ul>
