--- a/demo/scss/layout/_sidebar.scss
+++ b/demo/scss/layout/_sidebar.scss
@@ -5,6 +5,12 @@
 // Sidebar
 .sidebar {
     padding: $base-spacing-unit * 1.5 0;
+
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+    }
 }
 
     // Sidebar: link
