chore demo: add parameter default values

--- a/modules/dropdown/demo/includes/basic.html
+++ b/modules/dropdown/demo/includes/basic.html
@@ -3,7 +3,7 @@
         <lx-dropdown-toggle>
             <lx-button>Dropdown toggle</lx-button>
         </lx-dropdown-toggle>
-
+ 
         <lx-dropdown-menu>
             <ul>
                 <li><a class="dropdown-link">An action</a></li>
@@ -15,12 +15,12 @@
             </ul>
         </lx-dropdown-menu>
     </lx-dropdown>
-
+ 
     <lx-dropdown>
         <lx-dropdown-toggle>
             <lx-button>Links with icon</lx-button>
         </lx-dropdown-toggle>
-
+ 
         <lx-dropdown-menu>
             <ul>
                 <li>
@@ -56,12 +56,12 @@
             </ul>
         </lx-dropdown-menu>
     </lx-dropdown>
-
+ 
     <lx-dropdown>
         <lx-dropdown-toggle>
             <lx-button>Links with large icon</lx-button>
         </lx-dropdown-toggle>
-
+ 
         <lx-dropdown-menu>
             <ul>
                 <li>
@@ -102,6 +102,25 @@
                         <span>Remove</span>
                     </a>
                 </li>
+            </ul>
+        </lx-dropdown-menu>
+    </lx-dropdown>
+
+    <lx-dropdown lx-position="right" lx-over-toggle="true" lx-width="250">
+        <lx-dropdown-toggle>
+            <lx-button lx-color="black" lx-type="icon">
+                <i class="mdi mdi-dots-vertical"></i>
+            </lx-button>
+        </lx-dropdown-toggle>
+ 
+        <lx-dropdown-menu>
+            <ul>
+                <li><a class="dropdown-link">An action</a></li>
+                <li><a class="dropdown-link">Another action</a></li>
+                <li><a class="dropdown-link">Something else here</a></li>
+                <li class="dropdown-divider"></li>
+                <li><span class="dropdown-link dropdown-link--is-header">Header</span></li>
+                <li><a class="dropdown-link">Separated link</a></li>
             </ul>
         </lx-dropdown-menu>
     </lx-dropdown>
