chore demo: handle with parent state

--- a/demo/includes/layout/header/header.html
+++ b/demo/includes/layout/header/header.html
@@ -17,7 +17,7 @@
                     <a class="header-nav__link" ui-sref="app.css" ui-sref-active="header-nav__link--is-active">CSS</a>
                 </li>
                 <li>
-                    <a class="header-nav__link" ui-sref="app.components.button" ui-sref-active="header-nav__link--is-active">Components</a>
+                    <a class="header-nav__link" ui-sref="app.components" ui-sref-active="header-nav__link--is-active">Components</a>
                 </li>
             </ul>
         </div>
