chore demo: add fab documentation

--- a/demo/includes/layout/sidebar/sidebar-components.html
+++ b/demo/includes/layout/sidebar/sidebar-components.html
@@ -22,6 +22,9 @@
             <a class="sidebar__link" ui-sref="app.components.dropdown" ui-sref-active="sidebar__link--is-active">Dropdown</a>
         </li>
         <li>
+            <a class="sidebar__link" ui-sref="app.components.fab" ui-sref-active="sidebar__link--is-active">Floating Action Button</a>
+        </li>
+        <li>
             <a class="sidebar__link" ui-sref="app.components.text-field" ui-sref-active="sidebar__link--is-active">Text field</a>
         </li>
     </ul>
