chore demo: add file input documentation

--- a/demo/includes/layout/sidebar/sidebar-components.html
+++ b/demo/includes/layout/sidebar/sidebar-components.html
@@ -25,6 +25,9 @@
             <a class="sidebar__link" ui-sref="app.components.fab" ui-sref-active="sidebar__link--is-active">Floating Action Button</a>
         </li>
         <li>
+            <a class="sidebar__link" ui-sref="app.components.file-input" ui-sref-active="sidebar__link--is-active">File input</a>
+        </li>
+        <li>
             <a class="sidebar__link" ui-sref="app.components.text-field" ui-sref-active="sidebar__link--is-active">Text field</a>
         </li>
     </ul>
