--- a/demo/includes/layout/sidebar/sidebar-components.html
+++ b/demo/includes/layout/sidebar/sidebar-components.html
@@ -28,6 +28,9 @@
             <a class="sidebar__link" ui-sref="app.components.file-input" ui-sref-active="sidebar__link--is-active">File input</a>
         </li>
         <li>
+            <a class="sidebar__link" ui-sref="app.components.icon" ui-sref-active="sidebar__link--is-active">Icon</a>
+        </li>
+        <li>
             <a class="sidebar__link" ui-sref="app.components.text-field" ui-sref-active="sidebar__link--is-active">Text field</a>
         </li>
     </ul>
