--- a/modules/list/demo/includes/multi-lines.html
+++ b/modules/list/demo/includes/multi-lines.html
@@ -1,9 +1,9 @@
-<div flex-container="row" flex-gutter="24" flex-wrap>
+<div class="p+" flex-container="row" flex-gutter="24" flex-wrap>
     <div flex-item="6">
         <span class="fs-title display-block mb">Text only</span>
-
+ 
         <div class="divider divider--dark"></div>
-
+ 
         <ul class="list mt++">
             <li class="list-row list-row--multi-line">
                 <div class="list-row__content">
@@ -25,18 +25,18 @@
             </li>
         </ul>
     </div>
-
+ 
     <div flex-item="6">
         <span class="fs-title display-block mb">Icon with text</span>
-
+ 
         <div class="divider divider--dark"></div>
-
+ 
         <ul class="list mt++">
             <li class="list-row list-row--multi-line">
                 <div class="list-row__primary">
-                    <i class="icon icon--s icon--grey icon--flat mdi mdi-send"></i>
+                    <lx-icon lx-id="send" lx-size="s" lx-color="grey" lx-type="flat"></lx-icon>
                 </div>
-
+ 
                 <div class="list-row__content">
                     <span class="display-block">Two-line item</span>
                     <span class="display-block fs-body-1 tc-black-2">Secondary text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam massa quam. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</span>
@@ -44,9 +44,9 @@
             </li>
             <li class="list-row list-row--multi-line">
                 <div class="list-row__primary">
-                    <i class="icon icon--s icon--grey icon--flat mdi mdi-pencil"></i>
+                     <lx-icon lx-id="pencil" lx-size="s" lx-color="grey" lx-type="flat"></lx-icon>
                 </div>
-
+ 
                 <div class="list-row__content">
                     <span class="display-block">Two-line item</span>
                     <span class="display-block fs-body-1 tc-black-2">Secondary text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam massa quam. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</span>
@@ -54,9 +54,9 @@
             </li>
             <li class="list-row list-row--multi-line">
                 <div class="list-row__primary">
-                    <i class="icon icon--s icon--grey icon--flat mdi mdi-bell"></i>
+                    <lx-icon lx-id="bell" lx-size="s" lx-color="grey" lx-type="flat"></lx-icon>
                 </div>
-
+ 
                 <div class="list-row__content">
                     <span class="display-block">Two-line item</span>
                     <span class="display-block fs-body-1 tc-black-2">Secondary text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam massa quam. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</span>
@@ -64,18 +64,18 @@
             </li>
         </ul>
     </div>
-
+ 
     <div flex-item="6" class="mt++">
         <span class="fs-title display-block mb">Circled icon with text</span>
-
+ 
         <div class="divider divider--dark"></div>
-
+ 
         <ul class="list mt++">
             <li class="list-row list-row--multi-line list-row--has-separator">
                 <div class="list-row__primary">
-                    <i class="icon icon--l icon--grey icon--circled mdi mdi-folder"></i>
+                    <lx-icon lx-id="folder" lx-size="l" lx-color="grey" lx-type="circled"></lx-icon>
                 </div>
-
+ 
                 <div class="list-row__content">
                     <span class="display-block">Two-line item</span>
                     <span class="display-block fs-body-1 tc-black-2">Secondary text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam massa quam. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</span>
@@ -83,9 +83,9 @@
             </li>
             <li class="list-row list-row--multi-line list-row--has-separator">
                 <div class="list-row__primary">
-                    <i class="icon icon--l icon--blue icon--circled mdi mdi-file"></i>
+                    <lx-icon lx-id="file" lx-size="l" lx-color="blue" lx-type="circled"></lx-icon>
                 </div>
-
+ 
                 <div class="list-row__content">
                     <span class="display-block">Two-line item</span>
                     <span class="display-block fs-body-1 tc-black-2">Secondary text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam massa quam. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</span>
@@ -93,9 +93,9 @@
             </li>
             <li class="list-row list-row--multi-line list-row--has-separator">
                 <div class="list-row__primary">
-                    <i class="icon icon--l icon--green icon--circled mdi mdi-plus"></i>
+                    <lx-icon lx-id="plus" lx-size="l" lx-color="green" lx-type="circled"></lx-icon>
                 </div>
-
+ 
                 <div class="list-row__content">
                     <span class="display-block">Two-line item</span>
                     <span class="display-block fs-body-1 tc-black-2">Secondary text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam massa quam. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</span>
@@ -103,53 +103,53 @@
             </li>
         </ul>
     </div>
-
+ 
     <div flex-item="6" class="mt++">
         <span class="fs-title display-block mb">Avatar with text and icon</span>
-        
+ 
         <div class="divider divider--dark"></div>
-
+ 
         <ul class="list mt++">
             <li class="list-row list-row--multi-line list-row--has-separator">
                 <div class="list-row__primary">
                     <img src="/images/placeholder/1-square.jpg" width="40" height="40" class="img-round">
                 </div>
-
+ 
                 <div class="list-row__content">
                     <span class="display-block">Two-line item</span>
                     <span class="display-block fs-body-1 tc-black-2">Secondary text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam massa quam. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</span>
                 </div>
-
+ 
                 <div class="list-row__secondary">
-                    <i class="icon icon--xs icon--grey icon--flat mdi mdi-information"></i>
+                    <lx-icon lx-id="information" lx-size="xs" lx-color="grey" lx-type="flat"></lx-icon>
                 </div>
             </li>
             <li class="list-row list-row--multi-line list-row--has-separator">
                 <div class="list-row__primary">
                     <img src="/images/placeholder/2-square.jpg" width="40" height="40" class="img-round">
                 </div>
-
+ 
                 <div class="list-row__content">
                     <span class="display-block">Two-line item</span>
                     <span class="display-block fs-body-1 tc-black-2">Secondary text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam massa quam. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</span>
                 </div>
-
+ 
                 <div class="list-row__secondary">
-                    <i class="icon icon--xs icon--grey icon--flat mdi mdi-information"></i>
+                    <lx-icon lx-id="information" lx-size="xs" lx-color="grey" lx-type="flat"></lx-icon>
                 </div>
             </li>
             <li class="list-row list-row--multi-line list-row--has-separator">
                 <div class="list-row__primary">
                     <img src="/images/placeholder/3-square.jpg" width="40" height="40" class="img-round">
                 </div>
-
+ 
                 <div class="list-row__content">
                     <span class="display-block">Two-line item</span>
                     <span class="display-block fs-body-1 tc-black-2">Secondary text Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nam massa quam. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</span>
                 </div>
-
+ 
                 <div class="list-row__secondary">
-                    <i class="icon icon--xs icon--grey icon--flat mdi mdi-information"></i>
+                    <lx-icon lx-id="information" lx-size="xs" lx-color="grey" lx-type="flat"></lx-icon>
                 </div>
             </li>
         </ul>
