--- a/demo/includes/layout/sidebar/sidebar-components.html
+++ b/demo/includes/layout/sidebar/sidebar-components.html
@@ -31,6 +31,12 @@
             <a class="sidebar__link" ui-sref="app.components.icon" ui-sref-active="sidebar__link--is-active">Icon</a>
         </li>
         <li>
+            <a class="sidebar__link" ui-sref="app.components.list" ui-sref-active="sidebar__link--is-active">List</a>
+        </li>
+        <li>
+            <a class="sidebar__link" ui-sref="app.components.notification" ui-sref-active="sidebar__link--is-active">Notification</a>
+        </li>
+        <li>
             <a class="sidebar__link" ui-sref="app.components.text-field" ui-sref-active="sidebar__link--is-active">Text field</a>
         </li>
     </ul>
