feat progress: create circular progress with svg

--- a/modules/progress/views/progress.html
+++ b/modules/progress/views/progress.html
@@ -1,24 +1,15 @@
-<div class="progress-container progress-container--{{ lxProgress.lxType }} progress-container--{{ lxProgress.lxColor }}"
-     ng-style="lxProgress.getProgressDiameter()">
-    <div class="progress-circular-wrapper" ng-if="lxProgress.lxType === 'circular'">
-        <div class="progress-circular">
-            <div class="progress-circular__gap"></div>
-
-            <div class="progress-circular__left">
-                <div class="progress-circular__half-circle"></div>
-            </div>
-
-            <div class="progress-circular__right">
-                <div class="progress-circular__half-circle"></div>
-            </div>
-        </div>
+<div class="progress-container progress-container--{{ lxProgress.lxType }} progress-container--{{ lxProgress.lxColor }}">
+    <div class="progress-circular"
+         ng-if="lxProgress.lxType === 'circular'"
+         ng-style="lxProgress.getProgressDiameter()">
+        <svg class="progress-circular__svg">
+            <circle class="progress-circular__path" cx="50" cy="50" r="20" fill="none" stroke-width="4" stroke-miterlimit="10"/>
+        </svg>
     </div>
 
-    <div class="progress-linear-wrapper" ng-if="lxProgress.lxType === 'linear'">
-        <div class="progress-linear progress-linear--is-shown">
-            <div class="progress-linear__background"></div>
-            <div class="progress-linear__bar progress-linear__bar--first"></div>
-            <div class="progress-linear__bar progress-linear__bar--second"></div>
-        </div>
+    <div class="progress-linear" ng-if="lxProgress.lxType === 'linear'">
+        <div class="progress-linear__background"></div>
+        <div class="progress-linear__bar progress-linear__bar--first"></div>
+        <div class="progress-linear__bar progress-linear__bar--second"></div>
     </div>
 </div>
