chore demo: add progress documentation

--- a/demo/includes/layout/sidebar/sidebar-components.html
+++ b/demo/includes/layout/sidebar/sidebar-components.html
@@ -37,6 +37,9 @@
             <a class="sidebar__link" ui-sref="app.components.notification" ui-sref-active="sidebar__link--is-active">Notification</a>
         </li>
         <li>
+            <a class="sidebar__link" ui-sref="app.components.progress" ui-sref-active="sidebar__link--is-active">Progress</a>
+        </li>
+        <li>
             <a class="sidebar__link" ui-sref="app.components.text-field" ui-sref-active="sidebar__link--is-active">Text field</a>
         </li>
     </ul>
