--- a/demo/includes/layout/sidebar/sidebar-components.html
+++ b/demo/includes/layout/sidebar/sidebar-components.html
@@ -40,6 +40,9 @@
             <a class="sidebar__link" ui-sref="app.components.progress" ui-sref-active="sidebar__link--is-active">Progress</a>
         </li>
         <li>
+            <a class="sidebar__link" ui-sref="app.components.radio-button" ui-sref-active="sidebar__link--is-active">Radio button</a>
+        </li>
+        <li>
             <a class="sidebar__link" ui-sref="app.components.text-field" ui-sref-active="sidebar__link--is-active">Text field</a>
         </li>
     </ul>
