--- a/demo/includes/layout/sidebar/sidebar-components.html
+++ b/demo/includes/layout/sidebar/sidebar-components.html
@@ -49,6 +49,9 @@
             <a class="sidebar__link" ui-sref="app.components.select" ui-sref-active="sidebar__link--is-active">Select</a>
         </li>
         <li>
+            <a class="sidebar__link" ui-sref="app.components.switch" ui-sref-active="sidebar__link--is-active">Switch</a>
+        </li>
+        <li>
             <a class="sidebar__link" ui-sref="app.components.text-field" ui-sref-active="sidebar__link--is-active">Text field</a>
         </li>
     </ul>
