--- a/demo/includes/layout/sidebar/sidebar-components.html
+++ b/demo/includes/layout/sidebar/sidebar-components.html
@@ -55,6 +55,9 @@
             <a class="sidebar__link" ui-sref="app.components.tabs" ui-sref-active="sidebar__link--is-active">Tabs</a>
         </li>
         <li>
+            <a class="sidebar__link" ui-sref="app.components.toolbar" ui-sref-active="sidebar__link--is-active">Toolbar</a>
+        </li>
+        <li>
             <a class="sidebar__link" ui-sref="app.components.text-field" ui-sref-active="sidebar__link--is-active">Text field</a>
         </li>
     </ul>
