--- a/modules/text-field/views/text-field.html
+++ b/modules/text-field/views/text-field.html
@@ -18,4 +18,8 @@
     </label>
 
     <div ng-transclude></div>
+
+    <span class="text-field__clear" ng-click="lxTextField.clearInput()" ng-if="lxTextField.allowClear">
+        <i class="mdi mdi-close-circle"></i>
+    </span>
 </div>
