--- a/modules/text-field/demo/includes/basic.html
+++ b/modules/text-field/demo/includes/basic.html
@@ -1,5 +1,5 @@
 <div class="p+ pt0">
-    <lx-text-field lx-label="Company">
+    <lx-text-field lx-label="Company" lx-allow-clear="true">
         <input type="text" ng-model="vm.textFields.floating.company">
     </lx-text-field>
  
